# cpp-practice

./: README.md
goat-game/: CMakeLists.txt  README.md
goat-game/include/: main.h
goat-game/src/: CMakeCache.txt  CMakeLists.txt  Door.cpp  Door.h  GameShow.cpp  GameShow.h  Makefile  cmake_install.cmake  main.cpp
